# jaxility

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAIMS.md  CONTRIBUTING.md  KNOWN_GAPS.md  LICENSE.md  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/skills/jaxility/: SKILL.md
.cursor/rules/: index.mdc
.github/workflows/: ci.yml
AGENTS/: CONTEXT.md  DECISIONS.md  LIBRARIES.md  PATTERNS.md  README.md  RULES.md  TOOLCHAINS.md
cmake/toolchains/: aarch64-none-linux-gnu.cmake
docker/: cross-aarch64.Dockerfile
docs/examples/: 01_urdf_to_pi.ipynb  02_hil_explained.ipynb  03_dual_path_policy.ipynb  04_attestation.ipynb  07_cross_compile.ipynb
examples/: cartpole_end_to_end.py  so101_digital_twin_lifecycle.ipynb
jaxility/: __init__.py  builder.py  builder_cross.py  builder_deps.py  errors.py
jaxility/bench/: __init__.py  cartpole.py  controller_bench.py  record.py  run.py
jaxility/cli/: __init__.py  bench_cmd.py  build_cmd.py  build_urdf_cmd.py  dynamics_adapter.py
jaxility/compose/: __init__.py  attest.py  codegen.py  plan.py
jaxility/hil/: __init__.py  controller.py  harness.py  remote.py  runner.py  trace.py
jaxility/lowering/: __init__.py  casadi_to_acados.py  coverage.py  jax_to_casadi.py  pinocchio_rbd.py
jaxility/manifest/: __init__.py  artifact.py  canonical.py  models.py  signer.py  toolchain_detect.py  verify.py
jaxility/mcp/: __init__.py  server.py
jaxility/policy/: __init__.py  executorch.py  litert.py  onnx_export.py  quantize.py
jaxility/runtime/: __init__.py  c_runtime.py  deploy.py
jaxility/targets/: __init__.py  extended_targets.py  host.py  mock.py  models.py  pi5.py
jaxility/templates/: __init__.py  centroidal_mpc.py  lqr.py  tracking_mpc.py  wbc.py
jaxility/testing/: __init__.py  equivalence.py  jaxterity_source.py  mock_lower.py  sources.py  tolerances.py
jaxility/zoo/: __init__.py
jaxility/zoo/berkeley_humanoid_lite/: README.md  __init__.py
jaxility/zoo/cartpole/: README.md  __init__.py
jaxility/zoo/crazyflie/: README.md  __init__.py
jaxility/zoo/so100/: README.md  __init__.py  _dynamics.py
jaxility/zoo/unitree_g1/: README.md  __init__.py
runtime-c/: README.md
runtime-c/include/jaxility_runtime/: arena.h  cycle.h  dcache.h  deploy.h  rt.h
runtime-c/src/: arena.c  cycle_posix.c  dcache_aarch64.c  dcache_thumb.c  deploy_main.c  deploy_posix.c  rt_posix.c
runtime-c/test/: test_arena.c  test_cycle_posix.c  test_dcache.c  test_deploy.c  test_rt.c
scripts/: cross_build_attested_pi5.sh
test/: EQUIVALENCE.md  conftest.py
test/bench/: test_bench.py  test_cli_bench.py
test/compose/: test_attest.py  test_composition.py  test_dual_path_bench.py
test/e2e/: test_cartpole_end_to_end.py
test/hil/: cartpole_lqr_reference.py  cartpole_reference.py  conftest.py  test_dual_path.py  test_hil_controller.py  test_hil_local.py  test_hil_ssh.py  test_on_pi_controller.py  test_robot_on_pi.py
test/hil/fixtures/: cartpole_hil.c
test/mcp/: test_server.py
test/policy/: test_executorch_export.py  test_litert_export.py  test_onnx_export.py  test_quantize.py
test/unit/: test_acados_toolchain_pin.py  test_artifact.py  test_builder_deps.py  test_canonical.py  test_casadi_to_acados.py  test_centroidal_mpc_template.py  test_cli_build_urdf.py  test_cli_zoo_build.py  test_coverage.py  test_cross_compile.py  test_deploy_launcher.py  test_dynamic_slice_static.py  test_equivalence.py  test_extended_target_profiles.py  test_host_build.py  test_host_equivalence.py  test_jax_to_casadi.py  test_jaxterity_chain.py  test_lqr_template.py  test_manifest.py  test_mock_lower.py  test_multi_contact_centroidal_mpc.py  test_package_imports.py  test_pi5_target.py  test_pinocchio_rbd.py  test_runtime_c.py  test_target.py  test_top_level_docs.py  test_tracking_mpc_template.py  test_wbc_template.py  test_zoo.py  test_zoo_unitree_g1.py
